--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,25 +23,11 @@
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
-        <p>Контакты:
-        <p>kirilnazarov@gmail.com, 
-        <p>https://vk.com/nazarov_ki, 
-        <p>☎️ 8(953)825-41-76.
+        <p>Контакты:</p>
+        <p>kirilnazarov@gmail.com,</p>
+        <p>https://vk.com/nazarov_ki,</p>
+        <p>☎️ 8(953)825-41-76</p>
       </header>
 
-      <section>
-
-      {{ content }}
-
-      </section>
-
-      <footer>
-        {% if site.github.is_project_page %}
-        <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
-        {% endif %}
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
-    </div>
-    <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
   </body>
 </html>
