--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
 
-        <p>Контакты: kirilnazarov@gmail.com, https://vk.com/nazarov_ki, ☎️ 8(953)825-41-76.
+        <p>Контакты: <br>kirilnazarov@gmail.com,<br> https://vk.com/nazarov_ki,<br> ☎️ 8(953)825-41-76.
       </header>
 
       <section>
